# scalably-sync

./: .tool-versions  README.md  pyproject.toml
ansible/: main.yml  run.sh
ansible/tasks/: decompress.yml  email.yml  rclone.yml  s3.yml  sftp.yml
ansible/templates/: email_template.html.j2  rclone_s3.j2  rclone_sftp.j2
ansible/vars/: compliance.yml  finance.yml
docker/: docker-compose.yml
docker/localstack/cache/: machine.json  service-catalog-2_0_3_dev-1_29_97.pickle
scripts/: add-bucket.sh
