[tool.poetry]
name = "scalably-sync"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <alexandergfoley@gmail.com>"]
readme = "README.md"
packages = [{include = "scalably_sync"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
